# diploma

./: .gitignore  .template.env.routes  package-lock.json  package.json
backend/indexer/: .template.env  Cargo.toml  docker-compose.yml
backend/indexer/cql-init/: init_launchpool_data.cql  init_liquidity_pool_data.cql
backend/indexer/src/: macros.rs  main.rs
backend/indexer/src/listener/: mod.rs  solana_transactions_listener.rs
backend/indexer/src/programs/: launchpool_program.rs  liquidity_pool_program.rs  mod.rs
backend/indexer/src/utils/: lifecycle_control.rs  mod.rs  shutdown_signal.rs
backend/webserver/: .template.env  .template.env.cache  Cargo.toml
backend/webserver/src/: init.rs  main.rs
backend/webserver/src/launchpool/: mod.rs
backend/webserver/src/liquidity_pool/: mod.rs
backend/webserver/src/utils/: address_derive.rs  constants.rs  instructions.rs  mod.rs  serde.rs  web.rs
onchain-clients/launchpool/rust/: Cargo.toml
onchain-clients/launchpool/rust/accounts/: launchpool.rs  launchpools_config.rs  launchpools_configs_manager.rs  stake_position.rs
onchain-clients/launchpool/rust/errors/: launchpool.rs  mod.rs
onchain-clients/launchpool/rust/instructions/: close_stake_position.rs  collect_protocol_reward.rs  initialize_launchpool.rs  launch_launchpool.rs  update_launchpools_config_duration.rs  update_launchpools_config_protocol_reward_share.rs  update_launchpools_configs_manager_authority.rs
onchain-clients/launchpool/rust/src/: lib.rs  programs.rs
onchain-clients/launchpool/rust/types/: close_stake_position_event.rs  collect_protocol_reward_event.rs  increase_stake_position_event.rs  initialize_launchpool_event.rs  launch_launchpool_event.rs  mod.rs  open_stake_position_event.rs  update_launchpools_config_position_sizes_event.rs  update_launchpools_config_reward_authority_event.rs  update_launchpools_configs_manager_authority_event.rs  update_launchpools_configs_manager_head_authority_event.rs
onchain-clients/liquidity-pool/rust/: Cargo.toml  programs.rs
onchain-clients/liquidity-pool/rust/accounts/: amms_config.rs  amms_configs_manager.rs  cp_amm.rs
onchain-clients/liquidity-pool/rust/errors/: mod.rs
onchain-clients/liquidity-pool/rust/instructions/: collect_fees_from_cp_amm.rs  initialize_amms_config.rs  initialize_amms_configs_manager.rs  mod.rs  provide_to_cp_amm.rs  update_amms_config_fee_authority.rs  update_amms_config_providers_fee_rate.rs  withdraw_from_cp_amm.rs
onchain-clients/liquidity-pool/rust/types/: initialize_cp_amm_event.rs  launch_cp_amm_event.rs  liquidity_pool_instructions_admin_update_amms_configs_manager_authority_update_amms_configs_manager_authority_event.rs  mod.rs  provide_to_cp_amm_event.rs  (+5 more)
utilities/: Cargo.toml
utilities/src/: error.rs  helpers.rs  lib.rs
utilities/src/math/: mod.rs  q64_128.rs  uint_types.rs
utilities/src/system_instructions/: mod.rs  transfer_lamports_instruction.rs
utilities/src/token_accounts_instructions/: create_pda_token_account.rs  mod.rs
utilities/src/token_instructions/: burn_spl_tokens.rs  mint_spl_tokens.rs  mod.rs  transfer_tokens.rs
(+312 files in other folders)
