[package]
name = "utilities"
version = "0.1.0"
edition = "2021"

[features]
default = []
math = ["uint"]
solana = ["anchor-lang", "anchor-spl"]
full = ["math", "solana"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"], optional = true }
anchor-spl  = { version = "0.30.1", optional = true }
uint = { version = "0.10.0", optional = true }

[dev-dependencies]
proptest = "1.6.0"