[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
async-trait = "0.1.88"
futures = "0.3.31"

scylla = "1.2.0"
solana-client = "2.2.7"
solana-sdk = "2.2.2"
borsh = "1.5.7"
base64 = "0.22.1"

tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
dotenv = "0.15.0"
paste = "1.0.15"
anyhow = "1.0.98"

launchpool = { path = "../../onchain-clients/launchpool/rust" }
liquidity-pool = { path = "../../onchain-clients/liquidity-pool/rust" }

[dev-dependencies]
faux = "0.1.12"
mockall = "0.13.1"
proptest = "1.6.0"
