[package]
        name = "launchpool"
        version = "1.0.0"
        edition = "2021"
        
        [lib]
        path = "src/lib.rs"

        [dependencies]
        borsh = "1.5.7"
        solana-program = "2.2.1"
        serde = "1.0.219"
        num-derive = "0.4.2"
        thiserror = "2.0.12"
        num-traits = "0.2.19"
    