[package]
        name = "liquidity-pool"
        version = "1.0.0"
        edition = "2021"
        
        [lib]
        path = "src/lib.rs"
        
        [features]
        default = []
        fetch = ["solana-client", "solana-sdk"]
        
        [dependencies]
        borsh.workspace = true
        solana-program.workspace = true
        serde.workspace = true
        num-derive.workspace = true
        thiserror.workspace = true
        num-traits.workspace = true
        solana-client = { workspace = true, optional = true }
        solana-sdk = { workspace = true, optional = true }
    